--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <h3> Projects </h3>
   </div>
   <hr width="200" height="30"></hr>
-      <p style=" font-size: 13;"><strong> Tic-Tac-Toe </strong> <a href="https://github.com/anishghanta/anishghanta/tree/main/Tic-Tac-Toe">(Tic-Tac-Toe)</a>
+      <p style=" font-size: 13;"><strong> Tic-Tac-Toe </strong> <a href="https://github.com/anishghanta/anishghanta/tree/main/Tic-Tac-Toe/Tic-Tac-Toe.html">(Tic-Tac-Toe)</a>
 
       </p>
       <p>
