--- a/index.html
+++ b/index.html
@@ -23,13 +23,13 @@
           The Tic-Tac-Toe project involves creating a game in which single or two players take turns marking spaces in a 3x3 grid with X or O. The first player to get three in a row, either horizontally, vertically, or diagonally, wins the game. Here are the basic steps to create a Tic-Tac-Toe game.             
 
 
-    <p style=" font-size: 13;"><strong> Wordle </strong> <a href="https://github.com/anishghanta/anishghanta/tree/main/wordle">(Wordle)</a>
+    <p style=" font-size: 13;"><strong> Wordle </strong> <a href="/wordle/wordle.html">(Wordle)</a>
 
       </p>
       <p>
           The Wordle project involves creating a game where the player has to guess a secret word in a limited number of attempts.
 
-  <p style=" font-size: 13;""><strong> Image processing and photo album </strong> <a href="https://github.com/anishghanta/anishghanta/tree/main/Image%20processing%20and%20photo%20album">(Image processing and photo album)</a>
+  <p style=" font-size: 13;"><strong> Image processing and photo album </strong> <a href="/Image%20processing%20and%20photo%20album/">(Image processing and photo album)</a>
 
       </p>
     
