--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
       <p>
           The Wordle project involves creating a game where the player has to guess a secret word in a limited number of attempts.
 
-  <p style=" font-size: 13;"><strong> Image processing and photo album </strong> <a href="/Image%20processing%20and%20photo%20album/">(Image processing and photo album)</a>
+  <p style=" font-size: 13;"><strong> Image processing and photo album </strong> <a href="Image processing and photo album/PhotoAlbum.html">(Image processing and photo album)</a>
 
       </p>
     
