Update Tic Tac Toe.html

--- a/Tic-Tac-Toe/Tic Tac Toe.html
+++ b/Tic-Tac-Toe/Tic Tac Toe.html
@@ -24,7 +24,7 @@
        <button id="SinglePlayer">1Player</button>
        <button id="Two Player"> 2Player</button>
     </div>
-    <script src="app.js"></script>
+    <script src="Tic Tac Toe.js"></script>
   </body>
 </html>
 
