--- a/wordle/Wordle.html
+++ b/wordle/Wordle.html
@@ -22,6 +22,6 @@
 	<button onclick="checkGuess()">Check</button>
 	<p id="result"></p>
 
-	<script src="wordle.js"></script>
+	<script src="Wordle.js"></script>
 </body>
 </html>
