--- a/index.html
+++ b/index.html
@@ -39,4 +39,4 @@
     </div>
   </div>
       <h4>Social Media</h4> 
-  Catch me on LinkedIn - <a href="hhttps://www.linkedin.com/ghanta-anish-221168251/">@GhantaAnish</a>
+  Catch me on LinkedIn - <a href="https://www.linkedin.com/ghanta-anish-221168251/">@GhantaAnish</a>
